--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 
             </div>
             <div class="image">
-                <img src="illustration-hero.jpg" alt="features-tab">
+                <img src="features-tab.svg" alt="features-tab">
             </div>
+            
         </div>    
           <div class="features">
                 <h2>Features</h2>
