--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav id="sidebar-menu">
+    <nav>
         <svg width="148" height="25" style="margin-top:15px;" xmlns="http://www.w3.org/2000/svg">
             <g fill="none" fill-rule="evenodd">
                 <path
@@ -23,7 +23,7 @@
                 </g>
             </g>
         </svg>
-        <div class="list list-mb">
+        <div class="list">
             <ul class="menu">
                 <li>FEATURES</li>
                 <li>PRICING</li>
@@ -31,11 +31,9 @@
                 <li><button>LOGIN</button></li>
             </ul>
         </div>
-        <div class="hamburger">
-            <label id="hamburger-menu" for="hamburger-input">
-            </label>
-            <div class="overlay"></div>
-        </div>
+        <button class="hamburger">
+            <img src="icon-hamburger.svg" alt="hamburger" class="closeIcon">
+        </button>
     </nav>
 
 
