implement the close and open btn

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><button>LOGIN</button></li>
             </ul>
         </div>
-        <img src="icon-hamburger.svg" alt="hamburger" class="closeIcon">
+        <img src="icon-hamburger.svg" alt="hamburger" class="hamburger">
         <div class="mobile-nav">
             <div class="mobile-logo">
                 <svg width="148" height="25" style="margin-top:15px;" xmlns="http://www.w3.org/2000/svg">
@@ -45,7 +45,7 @@
                         </g>
                     </g>
                 </svg>
-                <img src="close-icon.svg" height="16px" width="15px" alt="">
+                <img class="closeIcon" src="close-icon.svg" height="16px" width="15px" alt="">
             </div>
             <ul class="mb-menu">
                 <li class="menuItem">FEATURES</li>
