--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
         <div class="questions">
             <h2>Frequently Asked Questions</h2>
-            <p>Here are some of our FAQs. If you have any other questions you’d like
+            <p class="p">Here are some of our FAQs. If you have any other questions you’d like
                 answered please feel free to email us.</p>
             <details>
                 <summary>What is Bookmark?
